# opengl_template

./: CMakeLists.txt  config.toml  vcpkg-configuration.json  vcpkg.json
include/glad/: glad.h
src/: glad.c  main.cpp
src/geGL/: Program.cpp
src/renderers/: DemoRenderer.cpp  DemoRenderer.h  Renderer.h  TriangleRenderer.cpp  TriangleRenderer.h
src/ui/: DemoImGui.cpp  DemoImGui.h  Window.cpp  Window.h
src/utils/: files.cpp  files.h
